[package]
name = "teleser"
version = "0.1.1"
edition = "2021"
description = "Telegram TMProto bot frame"
license = "MIT"
repository = "https://github.com/niuhuan/teleser-rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
grammers-client = "0.4.0"
grammers-session = "0.4.0"
grammers-tl-types = "0.4.0"
teleser_gen = { path = "../teleser_gen" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[features]
default = []
proxy = ["grammers-client/proxy"]
