[package]
name = "teleser"
version = "0.1.3"
edition = "2021"
description = "Telegram TMProto bot frame"
license = "MIT"
repository = "https://github.com/niuhuan/teleser-rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
grammers-client = "0.7.0"
grammers-session = "0.7.0"
grammers-tl-types = "0.7.0"
teleser_gen = "0.1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[features]
default = []
proxy = ["grammers-client/proxy"]
